[package]
name = "async_wrr_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["sync", "rt", "macros"], optional = true }
num = "0.4.1"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
blocking = []

[dev-dependencies]
tokio = { version = "1.35.0", features = ["default", "rt-multi-thread"] }

