[package]
name = "async_wrr_queue"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "[async & high performance] queued weighted round-robin load balance algorithm"
repository = "https://github.com/dupeiran001/async_wrr_queue_rs"
homepage = "https://github.com/dupeiran001/async_wrr_queue_rs"
readme = "README.md"
keywords = ["weighted-round-robin", "high-performance", "Async"]
categories = ["algorithms"]

[dependencies]
tokio = { version = "1.39.3", features = [
  "sync",
  "rt",
  "macros",
], optional = true }
num = "0.4.3"
log = "0.4.22"

[features]
default = ["tokio"]

# Enable tokio async support
tokio = ["dep:tokio"]

# Use blocking api
blocking = []

[dev-dependencies]
tokio = { version = "1.39.3", features = ["default", "rt-multi-thread"] }
